# ai_code_review_agent

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  presentation.pptx  prompts.md  tasks.md
src/ai_code_review_agent/: cli.py  config.py  graph.py  llm.py  models.py  prompts.py  state.py
src/ai_code_review_agent/nodes/: aggregate_summary.py  detect_changes.py  generate_report.py  load_files.py  review_file.py
src/ai_code_review_agent/tools/: git_tools.py  report_writer.py
tests/: test_cli.py  test_config.py  test_git_tools.py  test_graph.py  test_llm.py  test_models.py  test_nodes.py  test_prompts.py  test_report_writer.py  test_state.py
